--- a/src/app/invp-example/invp-example.component.scss
+++ b/src/app/invp-example/invp-example.component.scss
@@ -63,5 +63,9 @@ section {
       2.1213203436px 2.1213203436px 0 rgba(#6272a4, 0.5),
       2.4748737342px 2.4748737342px 0 rgba(#6272a4, 0.5),
       2.8284271247px 2.8284271247px 0 rgba(#6272a4, 0.5);
+
+    &.is-odd {
+      background-color: lighten(#50fa7b, 5%);
+    }
   }
 }
