--- a/src/app/invp-example/invp-example.component.html
+++ b/src/app/invp-example/invp-example.component.html
@@ -1,3 +1,12 @@
+<!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+  ~ @license
+  ~ Copyright (c) 2020 Piotr Stępniewski <k3nsei.pl@gmail.com>
+  ~ (https://www.linkedin.com/in/piotrstepniewski/)
+  ~
+  ~ Use of this source code is governed by an MIT-style license that can be
+  ~ found in the LICENSE file at https://opensource.org/licenses/MIT
+  -->
+
 <section #firstSection>
   <ng-container *ngFor="let element of elements; odd as odd">
     <div class="item" [class.is-odd]="odd" inViewport [inViewportOptions]="{ root: firstSection }" (inViewportAction)="handleAction($event)">
