--- a/projects/example/src/app/page-lazy-images/page-lazy-images.component.scss
+++ b/projects/example/src/app/page-lazy-images/page-lazy-images.component.scss
@@ -3,7 +3,9 @@
   font-size: 2em;
   font-weight: bold;
   color: rgba(255, 255, 255, 0.87);
-  transition: background-color 0.25s ease-in, color 0.25s ease-in;
+  transition:
+    background-color 0.25s ease-in,
+    color 0.25s ease-in;
 
   mat-spinner {
     inline-size: 50px;
