--- a/projects/example/src/app/page-highlighting/page-highlighting.component.html
+++ b/projects/example/src/app/page-highlighting/page-highlighting.component.html
@@ -1,7 +1,7 @@
 <mat-grid-list cols="2" rowHeight="2:1">
-  <ng-container *ngFor="let item of items; trackBy: trackByItem">
+  @for (item of items; track item.id) {
     <mat-grid-tile class="grid-tile inactive" inViewport (inViewportAction)="highlight($event)">
       {{ item.value }}
     </mat-grid-tile>
-  </ng-container>
+  }
 </mat-grid-list>
