--- a/projects/example/src/app/page-lazy-images/page-lazy-images.component.html
+++ b/projects/example/src/app/page-lazy-images/page-lazy-images.component.html
@@ -1,5 +1,5 @@
 <mat-grid-list cols="2" rowHeight="2:1">
-  <ng-container *ngFor="let item of items; trackBy: trackByItem; index as i">
+  @for (item of items; track item.id; let i = $index) {
     <mat-grid-tile class="grid-tile">
       <img
         #image="invp-ex-lazy-image"
@@ -7,7 +7,9 @@
         [width]="dimensions[0]"
         [height]="dimensions[1]"
         [attr.alt]="'Image #' + (i + 1)" />
-      <invp-ex-lazy-image-skeleton *ngIf="image.loading()" />
+      @if (image.loading()) {
+        <invp-ex-lazy-image-skeleton />
+      }
     </mat-grid-tile>
-  </ng-container>
+  }
 </mat-grid-list>
