feat(@ngx-intersection/core): create core and utils libraries

--- a/projects/apps/examples/src/app/app.component.html
+++ b/projects/apps/examples/src/app/app.component.html
@@ -4,9 +4,8 @@
       class="app-header"
       data-testid="header"
       title="ng-in-viewport examples"
-      [links]="links"
+      [links]="headerLinks"
       [sidebarRef]="sidebar" />
-
     <router-outlet />
 
     <button mat-mini-fab class="scroll-top" aria-label="Scroll back to top" (click)="scrollTop()">
@@ -22,13 +21,11 @@
     [mode]="isSmallDevice() ? 'over' : 'side'">
     @defer (on idle) {
       <mat-list>
-        <mat-list-item>
-          <a mat-button href="https://github.com/k3nsei/ng-in-viewport" target="_blank"> GitHub </a>
-        </mat-list-item>
-
-        <mat-list-item>
-          <a mat-button href="https://www.npmjs.com/package/ng-in-viewport" target="_blank"> NPM </a>
-        </mat-list-item>
+        @for (link of sidebarLinks; track $index) {
+          <mat-list-item [ngxIntersection]="{ threshold: [1] }" (intersectionChange)="checkVisibility($event)">
+            <a mat-button [href]="link.path" target="_blank">{{ link.label }}</a>
+          </mat-list-item>
+        }
       </mat-list>
     }
   </mat-sidenav>
